[package]
name = "magic-wormhole-transit-relay-rs"
version = "0.1.0"
authors = ["Joe Harrison <joe@sigwinch.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
regex = "1.3.4"
tokio = { version = "0.2.13", features = ["full"] }
tokio-util = { version = "0.3.0", features = ["full"] }
